# gatheringdata-blog

./: .gitignore  CLAUDE.md  README.md  SPEC.md  package-lock.json  package.json  scheduler.yml
.agent/: README.md
.github/workflows/: ci.yml  run-scheduled-tasks.yml
analysis/mtg-card-power/: CONTEXT.md  SPEC.md  analyze.py  pyproject.toml
analysis/mtg-color-efficiency/: README.md  charts.py  permutation_test.py  pyproject.toml
analysis/mtg-distributions/: .gitignore  analyze.py  pyproject.toml
analysis/mtg-legacy-tournament/: SPEC.md  analyze.py  build_dataset.py  fetch_data.py  pyproject.toml
analysis/skyrim-alchemy/: CONTEXT.md  SPEC.md  analyze.py  build_dataset.py  fetch_data.py  main.py  pyproject.toml
analysis/skyrim-alchemy/data/: build_profiles.json  ingredients.json  potions.json  results.json  three_ingredient_analysis.json
analysis/skyrim-alchemy/data/raw/: ingredients_list.json
analysis/tobins-q/: SPEC.md  analyze.py  pyproject.toml
design-mockups/: carousel-variants.html  curlicue-variants.html
public/data/: mtg-card-power-rankings.csv  mtg-legacy-tournament-gap.csv
public/images/mtg-card-power/: exemplar_profiles.csv
public/images/tobins-q/: q_monthly_proxy.csv
src/: consts.ts
src/components/: BaseHead.astro  ChartCarousel.astro  Curlicue.astro  Footer.astro  Header.astro  ScatterChart.jsx  SkyrimAlchemyOptimizer.jsx
src/content/blog/: mtg-card-power.md  mtg-color-efficiency.md  mtg-distributions.md  mtg-legacy-tournament.md  mtg-legacy-tournament.mdx  skyrim-alchemy.mdx
src/content/drafts/: tobins-q-post1-notes.md
src/data/: chart-updates.json
src/layouts/: BlogPost.astro
src/pages/: about.astro  broken.astro  charts.astro  index.astro
src/pages/blog/: index.astro
src/styles/: global.css
(+354 files in other folders)
