[project]
name = "mtg-card-power"
version = "0.1.0"
description = "Analysis for 'What Does a Mana Cost Buy You?' — MTG ability-to-cost ratio and power creep"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "ijson>=3.2",
    "wordcloud>=1.9",
]
